Fix dark mode toggle regressions & tweak top bar buttons color

--- a/htdocs/luci-static/material3/cascade.css
+++ b/htdocs/luci-static/material3/cascade.css
@@ -183,8 +183,8 @@
 		color-scheme: light;
 		--sidebar-width: 280px;
 		--header-height: 4rem;
---md-sys-color-primary: hsl(256, 34%, 60%);
---md-sys-color-primary-container: hsl(263, 65%, 94%);
+		--md-sys-color-primary: hsl(256, 34%, 60%);
+		--md-sys-color-primary-container: hsl(263, 65%, 94%);
 		--md-sys-color-primary-container-hover: #d0c7e8;
 		--md-sys-color-surface: #fef7ff;
 		--md-sys-color-surface-translucent: #fef7ffbb;
@@ -194,8 +194,8 @@
 		--md-sys-color-dropdown: #f3edf7;
 		--md-sys-color-dropdown-selected: #e3dde7;
 		--md-sys-color-dropdown-hover: #e2dce6;
-		--md-sys-color-refresh-button: #beb6d1;
-		--md-sys-color-refresh-button-hover: #a9a0c2;
+		--md-sys-color-refresh-button: #a99bf4;
+		--md-sys-color-refresh-button-hover: #8b7ae8;
 		--md-sys-color-font: #000;
 		--md-sys-color-light: #fff;
 	}
@@ -212,8 +212,8 @@
 		--md-sys-color-dropdown: #eeedf1;
 		--md-sys-color-dropdown-selected: #dedde1;
 		--md-sys-color-dropdown-hover: #dddce0;
---md-sys-color-refresh-button: #93b8e0;
---md-sys-color-refresh-button-hover: #70a1e0;
+		--md-sys-color-refresh-button: #93b8e0;
+		--md-sys-color-refresh-button-hover: #70a1e0;
 		--md-sys-color-font: #000;
 		--md-sys-color-light: #fff;
 	}
@@ -230,8 +230,8 @@
 		--md-sys-color-dropdown: #eeeee8;
 		--md-sys-color-dropdown-selected: #deded8;
 		--md-sys-color-dropdown-hover: #ddddd8;
-		--md-sys-color-refresh-button: #b6c1b9;
-		--md-sys-color-refresh-button-hover: #a0c2a9;
+		--md-sys-color-refresh-button: #8ecfaa;
+		--md-sys-color-refresh-button-hover: #6ab88e;
 		--md-sys-color-font: #000;
 		--md-sys-color-light: #fff;
 	}
@@ -248,8 +248,8 @@
 		--md-sys-color-dropdown: #f8ebe9;
 		--md-sys-color-dropdown-selected: #e8dbd9;
 		--md-sys-color-dropdown-hover: #e8dbd9;
-		--md-sys-color-refresh-button: #c1b6b6;
-		--md-sys-color-refresh-button-hover: #c2a0a0;
+		--md-sys-color-refresh-button: #e1a4a3;
+		--md-sys-color-refresh-button-hover: #cd7f7d;
 		--md-sys-color-font: #000;
 		--md-sys-color-light: #fff;
 	}
